<resources>
    <string name="app_name">CarryThisToo</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="msg_session_expired">Session is expired</string>
    <string name="msg_server_error">Hmmm… we can’t connect right now.We’ll get right on it.Please try again soon.</string>
    <string name="ok">OK</string>
    <string name="msg_token_expire">Your session is expired. Please login.</string>
    <string name="cancel">CANCEL</string>
    <string name="msg_delete_event">Are you sure you want to delete <b> %s </b> event?</string>
    <string name="msg_delete_permit">Are you sure you want to delete <b> %s </b> permit?</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_register">Register</string>
    <string name="hint_mobile_number">MOBILE NO.</string>
    <string name="hint_referral_code">REFERRAL CODE</string>
    <string name="txt_send_verification_code">Send Verification Code</string>
    <string name="txt_login">Login</string>
    <string name="txt_verifying_your_number">Verifying your number</string>
    <string name="hint_enter_verification_code">ENTER VERIFICATION CODE</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_sent_verification_code">We have sent a verification code to number</string>
    <string name="txt_verification_code">Verification Code ?</string>
    <string name="title_activity_dashboared">DashboaredActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_invite_gun_owner">Invite Gun Owners</string>
    <string name="nav_add_establisment">Add Gun-Free Zone</string>
    <string name="nav_compare_laws">Compare CCW Laws</string>
    <string name="nav_ccw_laws">CCW Laws</string>
    <string name="search_gun_zones">Nearby Gun Zones</string>
    <string name="nav_message">Message Admin</string>
    <string name="nav_calendar">Calendar</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_invite_owners">Invite Gun Owners</string>
    <string name="title_add_establisment">Add Gun-Free Zone</string>
    <string name="title_state_listing">CCW Laws</string>
    <string name="title_search_near_by_gun_zone">Nearby Gun Zones</string>
    <string name="title_message">Inbox</string>
    <string name="nav_home">Navigation</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_location">Registered Location : </string>
    <string name="overview_laws">Overview of Concealed Carry Laws</string>
    <string name="need_more_info">Need more information</string>
    <string name="need_sugestion">Does our information need correcting?</string>
    <string name="add_suggestion">Add Suggestion</string>
    <string name="hint_name">Name</string>
    <string name="hint_message">Message</string>
    <string name="add_new_event">Add New Event</string>
    <string name="hint_event_name">EVENT NAME</string>
    <string name="hint_description">DESCRIPTION</string>
    <string name="hint_date">DATE/TIME</string>
    <string name="hint_time">TIME</string>
    <string name="hint_add_location">ADD LOCATION</string>
    <string name="notify_me">Notify Me</string>
    <string name="add">Add</string>
    <string name="add_gun_free_zone">Add Gun-Free Zone</string>
    <string name="hint_name_of_establisment">NAME OF ESTABLISHMENT</string>
    <string name="hint_address_line_1">ADDRESS LINE 1</string>
    <string name="hint_address_line_2">ADDRESS LINE 2</string>
    <string name="hint_city">CITY</string>
    <string name="hint_united_state">UNITED STATE</string>
    <string name="hint_phone">PHONE</string>
    <string name="invite_gun_owner">Invite Gun Owners</string>
    <string name="invite">Invite</string>
    <string name="your_referral_code_is">Your Referral Code is</string>
    <string name="hint_search_zone">Zip Code...</string>
    <string name="filter_options">Filter Options</string>
    <string name="filter_result">Filter Result</string>
    <string name="hint_select_state">Select State</string>
    <string name="compare">Compare</string>
    <string name="push_notification">Push Notification</string>
    <string name="calendar_sync">Calendar Sync</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="sms_notification">Sms Notification</string>
    <string name="grant_access">Grant Access to phone apps and files</string>
    <string name="calendar_notification">Calendar Notification</string>
    <string name="cancel_premium_subscription">Cancel Premium Subscription</string>
    <string name="upcoming_travel">Upcoming Travel</string>
    <string name="history">History</string>
    <string name="hint_search_location">Search Location</string>
    <string name="Search">Search</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="txt_yes">YES</string>
    <string name="txt_no">NO</string>
    <string name="title_events">EVENTS</string>
    <string name="msg_app_exit">Are you sure , you want to exit?</string>
    <string name="nav_permit_information">Permit Information</string>
    <string name="permit_id">Permit ID: %s</string>
    <string name="state">State: %s</string>
    <string name="permit_type">Permit Type: %s</string>
    <string name="title_permits">Permit Information</string>
    <string name="txt_enter_state">Enter State</string>
    <string name="txt_enter_permit_id">Enter Permit ID</string>
    <string name="txt_permit_type">Permit Type</string>
    <string name="txt_add_permit_pic">Add Permit Picture</string>
    <string name="txt_not_permit_info">Permit Information will be used to make Reciprocity Map for you.</string>
    <string name="txt_confirm">Confirm</string>
    <string name="title_permit_information">Permit Information</string>
    <string name="title_contacts">Contacts</string>
    <string name="select_permit">Select Permit</string>
    <string name="btn_refresh_repo_map">Refresh Reciprocity Map</string>
    <string name="desription_details">Description Details</string>
    <string name="nav_repo_map">Reciprocity Map</string>
    <string name="title_repo_map">Reciprocity Map</string>
    <string name="title_compare_ccw_laws">COMPARE CCW LAWS</string>
    <string name="law_detail">* Tap on quick fact for details.</string>
    <string name="subscription_type">Subscription Type</string>
    <string name="tv_pin">PIN : %s</string>

    <string-array name="arr_establishment_type">
        <item name="accounting"></item>
        <item name="airport"></item>
        <item name="jewelry_store"></item>
        <item name="amusement_park"></item>
        <item name="art_gallery"></item>
        <item name="atm"></item>
        <item name="bakery"></item>
        <item name="bank"></item>
        <item name="bar"></item>
        <item name="beauty_salon"></item>
        <item name="bicycle_store"></item>
        <item name="book_store"></item>
        <item name="bowling_alley"></item>
        <item name="bus_station"></item>
        <item name="cafe"></item>
        <item name="campground"></item>
        <item name="car_dealer"></item>
        <item name="car_rental"></item>
        <item name="car_repair"></item>
        <item name="casino"></item>
        <item name="church"></item>
    </string-array>
</resources>
