<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fuel4media.carrythistoo.fragments.AddPermitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/colorTextBlack"
                android:textAllCaps="true"
                android:fontFamily="@font/houschka_pro_demibold"
                android:text="@string/txt_enter_state" />

            <EditText
                android:id="@+id/edt_state_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/colorTextBlack"
                android:textAllCaps="true"
                android:fontFamily="@font/houschka_pro_demibold"
                android:text="@string/txt_enter_permit_id" />

            <EditText
                android:id="@+id/edt_permit_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/colorTextBlack"
                android:textAllCaps="true"
                android:fontFamily="@font/houschka_pro_demibold"
                android:text="@string/txt_permit_type" />

            <EditText
                android:id="@+id/tv_permit_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/colorTextBlack"
                android:textAllCaps="true"
                android:fontFamily="@font/houschka_pro_demibold"
                android:text="@string/txt_add_permit_pic" />

            <ImageView
                android:id="@+id/iv_permit_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/placeholder_permit_image" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/txt_not_permit_info"
            android:textColor="@color/colorTextBlack"
            android:textSize="6sp" />

        <Button
            android:id="@+id/btn_confirm_permit"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center"
            android:text="@string/txt_confirm" />


    </LinearLayout>

    <include layout="@layout/progress_bar_small" />
</RelativeLayout>
