<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_permit"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_permit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_permit"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_permit_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/houschka_pro_demibold"
                    android:text="@string/permit_id"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/houschka_pro_demibold"
                    android:text="@string/state"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_permit_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/houschka_pro_demibold"
                    android:text="@string/permit_type"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="10sp" />


            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>